tests/pass/0015_negative_integer_arithmetic.ee
fn main() {
    debugPrint(-5 + 2);
}
