tests/fail/0068_double_right_modulo.ee
fn main() {
    print(5 % 2.5);
}
